Finished swap bot

--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,20 @@
-USERNAME=
-PASSWORD=
-
+# device/account specific identifying information
+# all three values are required
 USER_AGENT=
 UNIQUE_ID=
 SERIAL_NUM=
+
+# the number of seconds to wait between each /transaction/history poll
+# change this value only if you know what this is
+# default: 10
+POLL_RATE=10
+
+# the number of transactions per fetch when initializing
+# default: 50
+INIT_FETCH_AMNT=50
+
+# this is the note that you send to the user when swapping
+# possible variables:
+# {shaketag}, {amount}
+# eg: NOTE=beep boop, sending back {amount} to {shaketag}
+NOTE=
