--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,9 +5,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: test
-      - with:
-        python-version: '3.6'
-      - run: |
-          pip install -r requirements.txt
-          python -m unittest discover tests
+      - name: Setup Python 3.6
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.6'
+      - name: Install packages
+        run: pip install -r requirements.txt
+      - name: Run tests
+        run: python -m unittest discover tests
